# bevy-render-test

./: .gitignore  Cargo.toml
src/: main.rs
src/render/: dispatcher.rs  mod.rs  plugin.rs  renderer.rs  shaders.wgsl
src/render/shaders/: compute.wgsl  draw.wgsl
