[package]
name = "render-test"
version = "0.1.0"
authors = ["Arvin Ignaci <arvin.ignaci@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "42924d2" }
futures = "0.3"
image = "0.23"
wgpu = "0.7"
winit = "0.24"

[features]
default = ["bevy/dynamic", "wgpu/trace"]