[package]
name = "render-test"
version = "0.1.0"
authors = ["Arvin Ignaci <arvin.ignaci@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "42924d2", default-features = false, features = ["bevy_dynamic_plugin", "bevy_winit"]}
futures = "0.3"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", features = ["trace"] }
winit = "0.24"