[package]
name = "render-test"
version = "0.1.0"
authors = ["Arvin Ignaci <arvin.ignaci@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8", features = ["dynamic"] }
bytemuck = "1.12"
futures = "0.3"
wgpu = { version = "0.13", features = ["trace"] }

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3